# id3-algorithm

./: ALGORITHM_GUIDE.md  README.md  pyproject.toml
src/id3_algorithm/: __init__.py  cli.py  entropy.py  tree.py  variance.py
