[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "id3-algorithm"
version = "0.1.0"
description = "ID3 decision tree experiments with entropy and variance heuristics"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
